--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-    <h2>Travis County DNC Chair Map</h2>
+    <h2>Travis County Precinct Chair Map</h2>
     <div id="map"></div>
 
     <!-- Leaflet JS -->
